--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
 </head>
 <body>
     <h1>El cigarrillo y sus consecuencias</h1>
-</body>
-</html>
 <p>Entre las enfermedades relacionadas con el tabaco destacan las siguientes:
 
     <p>Bronquitis crónica</p>
@@ -39,3 +37,4 @@
 <p>Para hacer frente a la epidemia de tabaquismo, los Estados Miembros de la OMS adoptaron en 2003 el Convenio Marco de la OMS para el Control del Tabaco (CMCT de la OMS). Actualmente 182 países son Partes en este tratado.</p>
 <p>Las medidas MPOWER de la OMS están en consonancia con el CMCT de la OMS y se ha demostrado que salvan vidas y reducen los costos al evitar gastos sanitarios.</p>
 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c6/Delicados_%28Mexico%2C_cigarettes%29_3.JPG/800px-Delicados_%28Mexico%2C_cigarettes%29_3.JPG" alt=https://upload.wikimedia.org/wikipedia/commons/thumb/c/c6/Delicados_%28Mexico%2C_cigarettes%29_3.JPG/800px-Delicados_%28Mexico%2C_cigarettes%29_3.JPG style="width: 500px;height: 600;">
+</body> </html>
