--- a/index.html
+++ b/index.html
@@ -6,35 +6,38 @@
     <title>EL TABACO</title>
 </head>
 <body>
+    <HEADER>FUMADORES ANONIMOS</HEADER>
     <h1>El cigarrillo y sus consecuencias</h1>
-<p>Entre las enfermedades relacionadas con el tabaco destacan las siguientes:
+    <ul>
+        <li><a href="b-tablas.html">Contacto - Fumadores Anonimos</a></li>
+    </ul>
 
-    <p>Bronquitis crónica</p>
-
-   <p>Efisema Pulmonar</p>
-
-    <p>Hipertensión Arterial</p>
-
-    <p>Úlcera gastrointestinal</p>
-
-    <h2>Explicación de estas enfermedades</h2>
-    <h3>Bronquitis Cronica</h3>
+<p><u>Entre las enfermedades relacionadas con el tabaco destacan las siguientes: </u>
+<ul>
+    <li><u><b>Bronquitis Cronica</b></u></li><br>
+    <li><u><b>Efisema Pulmonar</b></u></li> <br>
+    <li><u><b>Hipertensión Arterial</b></u></li> <br>
+</ul>
+    <h2><u>Explicación de estas enfermedades</u></h2>
+    <h3><b><u>Bronquitis Cronica</u></b></h3>
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ0YbJzOKJsxEQgpFkrVvdoseeN7GWq4UE18Du1eyjKYQ&s" alt="">
-<p>Afección pulmonar que se presenta con el tiempo en la que los bronquios (grandes conductos de aire que conducen a los pulmones) se inflaman y forman cicatrices.</p>
+<p><b>Afección pulmonar que se presenta con el tiempo en la que los bronquios (grandes conductos de aire que conducen a los pulmones) se inflaman y forman cicatrices.</b></p>
 
 
-<h3>Efisema Pulmonar</h3>
+<h3><b><u>Efisema Pulmonar</u></b></h3>
 <img src="https://st4.depositphotos.com/6563466/38921/i/450/depositphotos_389217242-stock-photo-human-respiratory-system-lungs-anatomy.jpg" alt="">
-<p>Trastorno que afecta los alvéolos (bolsas pequeñitas de aire) de los pulmones. La transferencia del oxígeno y el dióxido de carbono en los pulmones se produce en las paredes de los alvéolos. En el caso del enfisema, los alvéolos se inflan de modo anormal, se dañan sus paredes y la respiración se vuelve difícil.</p>
-<h3>Hipertensión Arterial</h3>
+<p><b>Trastorno que afecta los alvéolos (bolsas pequeñitas de aire) de los pulmones. La transferencia del oxígeno y el dióxido de carbono en los pulmones se produce en las paredes de los alvéolos. En el caso del enfisema, los alvéolos se inflan de modo anormal, se dañan sus paredes y la respiración se vuelve difícil.</b></p>
+<h3><b><u>Hipertensión Arterial</u></b></h3>
 <img src="https://media.istockphoto.com/id/1156928011/es/foto/ilustraci%C3%B3n-conceptual-de-ataque-card%C3%ADaco-3d.webp?b=1&s=170667a&w=0&k=20&c=QFxehP0mJVruxajIsW-7T58ugE_2XMfGblvb1xOSa0Y=" alt="">
-<p>La hipertensión o hipertensión arterial es un trastorno por el cual los vasos sanguíneos tienen persistentemente una tensión elevada. La sangre se distribuye desde el corazón a todo el cuerpo por medio de los vasos sanguíneos. Con cada latido, el corazón bombea sangre a los vasos.</p>
-<h6>Datos y cifras</h6>
-<p>El tabaco mata hasta a la mitad de las personas que lo consumen y no lo dejan. (1-3)</p>
-<p>El tabaco mata a más de 8 millones de personas cada año, de los cuales cerca de 1,3 millones son no fumadores que están expuestos al humo ajeno. (4)</p>
-<p>Alrededor del 80 por ciento de los 1 300 millones de consumidores de tabaco que hay en el mundo viven en países de ingresos medianos o bajos.</p>
-<p>En 2020, el 22,3 por ciento de la población mundial consumía tabaco: concretamente el 36,7 por ciento de los hombres y el 7,8 por ciento de las mujeres.</p>
-<p>Para hacer frente a la epidemia de tabaquismo, los Estados Miembros de la OMS adoptaron en 2003 el Convenio Marco de la OMS para el Control del Tabaco (CMCT de la OMS). Actualmente 182 países son Partes en este tratado.</p>
-<p>Las medidas MPOWER de la OMS están en consonancia con el CMCT de la OMS y se ha demostrado que salvan vidas y reducen los costos al evitar gastos sanitarios.</p>
-<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c6/Delicados_%28Mexico%2C_cigarettes%29_3.JPG/800px-Delicados_%28Mexico%2C_cigarettes%29_3.JPG" alt=https://upload.wikimedia.org/wikipedia/commons/thumb/c/c6/Delicados_%28Mexico%2C_cigarettes%29_3.JPG/800px-Delicados_%28Mexico%2C_cigarettes%29_3.JPG style="width: 500px;height: 600;">
-</body> </html>
+<p><b>La hipertensión o hipertensión arterial es un trastorno por el cual los vasos sanguíneos tienen persistentemente una tensión elevada. La sangre se distribuye desde el corazón a todo el cuerpo por medio de los vasos sanguíneos. Con cada latido, el corazón bombea sangre a los vasos.</b></p>
+<h6><b><u>Datos y cifras</u></b></h6>
+<p><b>El tabaco mata hasta a la mitad de las personas que lo consumen y no lo dejan. (1-3) </b></p>
+<p><b>El tabaco mata a más de 8 millones de personas cada año, de los cuales cerca de 1,3 millones son no fumadores que están expuestos al humo ajeno. (4)</b></p>
+<p><b>Alrededor del 80 por ciento de los 1 300 millones de consumidores de tabaco que hay en el mundo viven en países de ingresos medianos o bajos.</b></p>
+<p> <b>En 2020, el 22,3 por ciento de la población mundial consumía tabaco: concretamente el 36,7 por ciento de los hombres y el 7,8 por ciento de las mujeres. </b></p>
+<p><b>Para hacer frente a la epidemia de tabaquismo, los Estados Miembros de la OMS adoptaron en 2003 el Convenio Marco de la OMS para el Control del Tabaco (CMCT de la OMS). Actualmente 182 países son Partes en este tratado.</b></p>
+<p> <b>Las medidas MPOWER de la OMS están en consonancia con el CMCT de la OMS y se ha demostrado que salvan vidas y reducen los costos al evitar gastos sanitarios. </b></p>
+<br><br><br>
+<footer>PAGINA HECHA POR LAUREANO MIQUELARENA</footer>
+ </body> </html>
+<nav></nav>
