--- a/b-tablas.html
+++ b/b-tablas.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="b-tablas.css">
 </head>
 <body bgcolor="black" text="white">
+    <nav>
     <center><header>FUMADORES ANONIMOS</header></center>
     <center><img src="fumadoresanonimos.jpg" alt="" width="600px" height="300px"></center>
     <center><table></center>
@@ -13,20 +15,20 @@
     <center><u><h1>Horarios de atención al cliente para rehabilitación de Fumadores Anonimos </h1></center></u>
     <table border="4"> 
     <tr>
-        <td>Dias de atención</td>
-        <td rowspan="1">Fumadores Anonimos</td>
+        <td class="dia-1">Dias de atención</td>
+        <td rowspan="1" class="hora-1">Fumadores Anonimos</td>
     </tr>
     <tr>
-        <td>Lunes</td>
-        <td rowspan="1">13:00 P.M a 18:00 P.M</td> 
+        <td class="dia-2">Lunes</td>
+        <td rowspan="1" class="hora-2"><i>13:00 P.M a 18:00 P.M</i></td> 
     </tr>
     <tr>
-        <td>Martes</td>
-        <td rowspan="1">9:00 A.M a 16:00 P.M</td>
+        <td class="dia-3">Martes</td>
+        <td rowspan="1" class="hora-3"><i>9:00 A.M a 16:00 P.M</i></td>
     </tr>
     <tr>
-        <td>Miercolés</td>
-        <td rowspan="1">12:00 A.M</A> a 17:00 P.M</td>
+        <td class="dia-4">Miercolés</td>
+        <td rowspan="1" class="hora-4"><i>12:00 A.M a 17:00 P.M</i></td>
     </tr>
 </table>
 <br><br><br>
@@ -41,5 +43,6 @@
     <section><h2><u>Las reuniones de Fumadores Anónimos se llevan a cabo varias veces a la semana en diferentes horarios para adaptarse a las necesidades de los miembros. Para obtener más información sobre esta organización e inclusive registrarse en la pagina web, le recomiendo que haga click en el link de arriba así usted sera redirigido hacia la pagina oficial de esta organización. Muchas gracias por su atención y espero que se le haga posible rehabilitarse.</u></h2></section>
     <br><br><br>
     <footer>PAGINA HECHA POR LAUREANO MIQUELARENA</footer>
+</nav>
 </body>
 </html>
