--- a/d-registro.html
+++ b/d-registro.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="d-registro.css">
 </head>
-<body bgcolor="black" text="white">
-    <header>FUMADORES ANONIMOS</header>
+<body class="formulario" bgcolor="white" text="black">
+    <nav>
+    <header class="cabecita"><center>FUMADORES ANONIMOS</center></header>
     <form action="">
         <h2><u>Registrate en Fumadores Anonimos para obtener ayuda profesional</u></h1>
         <label for="Nombre">Nombre:</label>
@@ -51,6 +53,7 @@
 
     </form>
     <br><br><br>
-    <FOOTER>PAGINA HECHA POR LAUREANO MIQUELARENA</FOOTER>
+    <FOOTER class="pie-pag" ><center>PAGINA HECHA POR LAUREANO MIQUELARENA</center></FOOTER>
+</nav>
 </body>
 </html>
