--- a/c-documento.html
+++ b/c-documento.html
@@ -4,18 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="c-documento.css">
 </head>
 <body>
     <center><img src="tabaanonimos.jpg" alt="" width="400px"></center>
     <CENter><nav>
         <h2><a href="d-registro.html">REGISTRATE EN NUESTRA PAGINA</a></h2>
-        <header>FUMADORES ANONIMOS</header>
+        <header class="cabeza-pag">FUMADORES ANONIMOS</header>
     </nav></CENter>
     <b><u><h1>Bienvenido a Fumadores Anonimos, estamos aquí para ayudar a los fumadores a rehabilitarse y podes dejar este vicio para siempre. Nuestros metodos y actividades para poder lleva a cabo este proceso son los suguientes:</h1></u></b>
-    <ul>
-        <h2><li>Reuniones de apoyo: Organizan reuniones regulares donde los miembros pueden compartir sus experiencias y apoyarse mutuamente en su camino para dejar de fumar.</li></h2>
-        <h2><li>Programa de 12 pasos: Utilizan un programa basado en los 12 pasos para ayudar a los fumadores a comprender su adicción y desarrollar estrategias para superarla.</li></h2>
-        <h2><li>Literatura y recursos: Ofrecen libros, folletos y otros recursos educativos que ayudan a los miembros a comprender mejor su adicción y los pasos necesarios para dejar de fumar.</li></h2>
+    <ul class="listas">
+        <li>Reuniones de apoyo: Organizan reuniones regulares donde los miembros pueden compartir sus experiencias y apoyarse mutuamente en su camino para dejar de fumar.</li>
+        <li>Programa de 12 pasos: Utilizan un programa basado en los 12 pasos para ayudar a los fumadores a comprender su adicción y desarrollar estrategias para superarla.</li>
+        <li>Literatura y recursos: Ofrecen libros, folletos y otros recursos educativos que ayudan a los miembros a comprender mejor su adicción y los pasos necesarios para dejar de fumar.</li>
     </ul>
     <main>
         <b><section><i>Fumadores Anónimos es una comunidad de apoyo para aquellos que desean dejar de fumar. Proporcionan reuniones regulares donde los miembros comparten sus experiencias, fortalezas y esperanzas en un ambiente seguro y confidencial. A través de un programa de 12 pasos, ayudan a los fumadores a entender su adicción, a desarrollar estrategias para mantenerse libres del tabaco y a construir una red de apoyo sólida. Además, ofrecen recursos y herramientas para facilitar el proceso de dejar de fumar y mantenerse libre del tabaco a largo plazo</i></section></b>
@@ -30,6 +31,6 @@
     
     </main>
     <br><br><br>
-    <footer>PAGINA HECHA POR LAUREANO MIQUELARENA</footer>
+    <footer class="pie-pagina"><center>PAGINA HECHA POR LAUREANO MIQUELARENA</center></footer>
 </body>
 </html>
