--- a/d-registro.html
+++ b/d-registro.html
@@ -5,51 +5,70 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="d-registro.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </head>
+<header class="cabecita"><center>FUMADORES ANONIMOS</center></header>
 <body class="formulario" bgcolor="white" text="black">
+    <form>
+        <div class="mb-3">
+          <label for="exampleInputEmail1" class="form-label">Correo electronico</label>
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+          <div id="emailHelp" class="form-text">No compartiremos esta información con nadie.</div>
+        </div>
+        <div class="input-group flex-nowrap">
+            <span class="input-group-text" id="addon-wrapping">@</span>
+            <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="addon-wrapping">
+          </div>
+        <div class="mb-3">
+          <label for="exampleInputPassword1" class="form-label">Contraseña</label>
+          <input type="password" class="form-control" id="exampleInputPassword1">
+        </div>
+        <div class="mb-3 form-check">
+          <input type="checkbox" class="form-check-input" id="exampleCheck1">
+          <label class="form-check-label" for="exampleCheck1">Notificame de novedades</label>
+        </div>
+      </form>
     <nav>
-    <header class="cabecita"><center>FUMADORES ANONIMOS</center></header>
-    <form action="">
-        <h2><u>Registrate en Fumadores Anonimos para obtener ayuda profesional</u></h1>
-        <label for="Nombre">Nombre:</label>
-        <input type="text" size="50px" required minlength="5"> <br>
-        <label for="Apellido">Apellido:</label>
-        <input type="text" size="50px" required minlength="5"> <br> <br>
-        <label for="Contraseña">Contraseña:</label>
-        <input type="password" name="pass" required minlength="5">
+   
         
         <br> <br> <br> <br>
-        Indique su genero:
-        Masculino: <input type="radio" name="sexo" required> <br>
-        Femenino: <input type="radio" name="sexo" required> <br>
-        No Binario: <input type="radio" name="sexo" required> <br>
-        Ninguno de los anteriores <input type="radio" name="sexo" required> <br>
+        <select class="form-select" aria-label="Default select example">
+            <option selected>Seleccione su genero</option>
+            <option value="1">Masculino</option>
+            <option value="2">Femenino</option>
+            <option value="3">Otro</option>
+          </select>> <br>
         <br><br>
-        Indique hace cuanto que usted fuma:
-        De 3 a 6 meses: <input type="radio" name="fumar" required> <br>
-        De 1 año a 2 años: <input type="radio" name="fumar" required> <br>
-        Hace 3 años o más: <input type="radio" name="fumar" required> <br>
+        <select class="form-select" aria-label="Default select example">
+            <option selected>Indique hace cuanto usted fuma</option>
+            <option value="1">Menos de un año</option>
+            <option value="2">Más de año y medio</option>
+            <option value="3">Hace más de 3 años</option>
+          </select>
         <br><br><br>
-        ¿Alguna vez tuvo algún problema de salud por fumar? <br>
-        <select name="salud" id="salud">
-        <option value="Si">Si</option required>
-        <option value="No">No</option required>
+        <select class="form-select" aria-label="Default select example">
+            <option selected>¿Alguna vez tuvo un problema de salud por fumar?</option>
+            <option value="1">Si</option>
+            <option value="2">No, nunca</option>
+          </select>
     </select>
     <br><br>
     ¿Qué clase de problema tuvo? <br>
     <textarea name="" id="" cols="30" rows="5" required></textarea>
     <br><br><br>
-    ¿Alguna vez intento dejar de fumar? ¿Cuantas veces? <br> <br>
-    No, nunca lo he intentado:<input type="radio" name="dejar" required> <br>
-    Sí, lo he intentado una vez: <input type="radio" name="dejar" required> <br>
-    Lo he intentado más de tres veces: <input type="radio" name="dejar" required> <br>
+    <select class="form-select" aria-label="Default select example">
+        <option selected>¿Alguna vez intento dejarlo?</option>
+        <option value="1">No, nunca lo he intentado</option>
+        <option value="2">Si, lo he intentado más de una vez</option>
+      </select>
     <br><br>
     ¿Cual fue el motivo por el cual intento dejarlo?
     <br><br>
     <textarea name="" id="" cols="30" rows="5" required></textarea>
 </select>
 <br><br><br>
-    <input type="submit" value="Registrarse y Enviar">
+<center><button type="button" class="btn btn-primary">Registrarse y enviar</button></center>
 
     </form>
     <br><br><br>
